# retail-inventory-managment-with-big-data

./: .env  DOCUMENTATION_INDEX.md  PIPELINE_VERIFICATION.md  PROJECT_DOCUMENTATION.md  README.md  SETUP_GUIDE.md  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  setup.py  setup.sh
AGENT/: Claude-big-dataBig data architecture with Python.md  architecure.md  business-value.md  detailed-architecture .md  flow-diagram.md  project-architecure.md
clickhouse/init/: 01-schema.sql  02-enhanced-schema.sql  03-spark-streaming-bridge.sql  04-kafka-integration.sql  init-database.sh
config/: settings.py
dags/: data_quality_dag.py  retail_inventory_dag.py
data/: brands.json  categories.json  products.json  stores.json
docker/data-generator/: Dockerfile
docker/spark-job-submitter/: Dockerfile  auto-submit.sh  entrypoint.sh
docs/: clickhouse_table_verification.md
logs/scheduler/: latest
planning/: COMPREHENSIVE_PLAN.md  IMPLEMENTATION_PLAN.md  KAFKA_EVENT_GENERATOR_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  TECHNICAL_ARCHITECTURE.md
powerbi/: retail_dashboard.pbix
project/: docker-compose.yml  pyproject.toml
project/config/: minio.py
project/kafka/: producer.py
scripts/: bootstrap.sh  check_clickhouse_tables.py  container_clickhouse_check.py  create_sample_data.py  data_generator.py  populate_sample_data.py  quick_clickhouse_check.sh  startup_check.py  test_clickhouse_write.py  test_minio_integration.py  test_minio_simple.py  test_pipeline.py  test_pipeline_flow.py  test_spark_clickhouse_bridge.py
spark_jobs/: README.md  auto-submit.sh  batch_kafka_reader.py  batch_kafka_test.py  batch_processing.py  clickhouse_writer.py  inventory_streaming.py  ml_training.py  sales_streaming.py  simple_streaming_bridge.py  submit_jobs.sh  unified_streaming_bridge.py
src/: __init__.py
src/producers/: __init__.py  base_producer.py  inventory_producer.py  sales_producer.py
src/utils/: minio_client.py
