[project]
name = "retail-inventory-managment-with-big-data"
version = "0.1.0"
description = "Big Data Retail Inventory Management System with Kafka, Spark, ClickHouse, and MinIO"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Data Processing
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    # Kafka
    "kafka-python>=2.0.0",
    "confluent-kafka>=2.0.0",
    "avro-python3>=1.10.0",
    # Spark
    "pyspark>=3.4.0",
    # Database
    "clickhouse-connect>=0.6.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    # Storage
    "minio>=7.0.0",
    "boto3>=1.26.0",
    # Machine Learning
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    # Airflow
    "apache-airflow>=2.7.0",
    "apache-airflow-providers-apache-spark>=3.0.0",
    "apache-airflow-providers-http>=4.0.0",
    # HTTP & API
    "requests>=2.28.0",
    # Utilities
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "faker>=15.0.0",
    # Monitoring
    "prometheus-client>=0.16.0",
    "structlog>=22.0.0",
    # Date & Time
    "python-dateutil>=2.8.0",
    "pytz>=2022.0",
    # Serialization
    "msgpack>=1.0.0",
    "orjson>=3.8.0",
    # CLI
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    # Development
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
